--- a/Project.Test/Project.Tests.csproj
+++ b/Project.Test/Project.Tests.csproj
@@ -18,6 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Project.Api\Project.Api.csproj" />
     <ProjectReference Include="..\Project.Core\Project.Core.csproj" />
     <ProjectReference Include="..\Project.Services\Project.Services.csproj" />
   </ItemGroup>
