--- a/Project.Application/Project.Application.csproj
+++ b/Project.Application/Project.Application.csproj
@@ -12,4 +12,8 @@
     <ProjectReference Include="..\Project.Core\Project.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Response\" />
+  </ItemGroup>
+
 </Project>
